src/parser/snapshots/texlab__parser__latex__tests__parse@citation__citation_multiple_keys.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/citation/citation_multiple_keys.txt
---
ROOT@0..15
  PREAMBLE@0..15
    CITATION@0..15
      COMMAND_NAME@0..5 "\\cite"
      CURLY_GROUP_WORD_LIST@5..15
        L_CURLY@5..6 "{"
        KEY@6..9
          WORD@6..9 "foo"
        COMMA@9..10 ","
        WHITESPACE@10..11 " "
        KEY@11..14
          WORD@11..14 "bar"
        R_CURLY@14..15 "}"

