src/parser/snapshots/texlab__parser__latex__tests__parse@citation__citation_simple.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/citation/citation_simple.txt
---
ROOT@0..10
  PREAMBLE@0..10
    CITATION@0..10
      CITATION_NAME@0..5 "\\cite"
      CURLY_GROUP_WORD_LIST@5..10
        L_CURLY@5..6 "{"
        KEY@6..9
          WORD@6..9 "foo"
        R_CURLY@9..10 "}"

